...
        android:id="@+id/container_step_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/container_media_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/sep_step_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tv_no_media_display"
                android:layout_width="match_parent"
...
