...
                android:layout_weight="0.5"
                android:text="@string/ingredient_title"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"/>
            <TextView
                android:id="@+id/tv_menu_steps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_weight="0.5"
                android:text="@string/step_title"
                android:gravity="center"
...
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_steps_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>



...
